<resources>
    <string name="app_name">PokeCardProject</string>
    <string name="nom">Nom</string>
    <string name="taille">Taille</string>
    <string name="poids">Poids</string>
    <string name="attaque">Attaque</string>
    <string name="defense">Défense</string>
    <string name="attaque_speciale">Attaque Spéciale</string>
    <string name="defense_speciale">Défense Spéciale</string>
    <string name="competences">Compétences :</string>
    <string name="download_failed">Le téléchargement des données a échoué</string>
    <string name="connexion">Se Connecter</string>
    <string name="nouvel_utilisateur">Nouvel Utilisateur</string>
    <string name="sinscrire">"S'inscrire"</string>
    <string name="plus_de_points">Trop de points utilisés !</string>
    <string name="plus_de_competences">Plus de compétences disponibles !</string>
    <string name="modifier_compte">Modifier mon compte</string>
    <string name="login">Login</string>
    <string name="mail">Mail</string>
    <string name="password">Mot De Passe</string>
    <string name="saisie_incorrecte">Saisie Incorrecte</string>
    <string name="mes_creations">Mes créations</string>
    <string name="title_activity_add_pokemon">AddPokemonActivity</string>
    <string name="modifications_enregistrees">Modifications enregistrées</string>
    <string name="echec_modification">Echec de la modification</string>
    <string name="annuler">Annuler</string>
    <string name="suivant">Suivant</string>
    <string name="precedent">Précédent</string>
    <string name="creer">Créer</string>
    <string name="poke_card">POKE CARD</string>
    <string name="serveur_local">Serveur Local</string>
    <string name="puce">◦</string>
    <string name="pokecreation">PokeCreation</string>
    <string name="pokedex">PokeDex</string>
    <string name="settings">Settings</string>
    <string name="poke_settings">PokeSettings</string>
    <string name="erreur">Erreur</string>
    <string name="login_incorrect">Login incorrect</string>
    <string name="utilisateur_existe_deja">Le nom d\'utilisateur existe déjà</string>
    <string name="utilisateur_bien_enregistre">Utilisateur bien enregistré</string>
    <string name="echec_enregistrement">Echec de l\'enregistrement</string>
    <string name="nb_points_restants">Points restants : </string>
    <string name="competences_restants">Compétences restantes : </string>
    <string name="init_zero">: 0</string>
    <string name="acces_non_autorise">Accès au paramétrage non autorisé</string>
    <string name="s_enregister">S\'enregistrer</string>
    <string name="ou">ou</string>
</resources>
