<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextViewAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poke_card"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_login"
        style="@style/EditTextLoginStyle"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/user"
        android:hint="@string/login"
        android:nextFocusDown="@id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        style="@style/EditTextLoginStyle"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/lock"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/edt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_connexion"
        style="@style/ButtonAccueil"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/connexion"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintEnd_toStartOf="@id/btn_registration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_or"
        style="@style/TextViewParams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        app:layout_constraintTop_toTopOf="@id/btn_connexion"
        app:layout_constraintBottom_toBottomOf="@id/btn_connexion"
        app:layout_constraintEnd_toStartOf="@id/btn_registration"
        app:layout_constraintStart_toEndOf="@id/btn_connexion" />

    <Button
        android:id="@+id/btn_registration"
        style="@style/ButtonAccueil2"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/sinscrire"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_connexion" />

</androidx.constraintlayout.widget.ConstraintLayout>