<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_details_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/show_total_cardview"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/InsideCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_show_total"
                style="@style/TextViewInfo"
                android:gravity="center_vertical|start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/statistics_cardview"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_total_cardview">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/InsideCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/lbl_attaque"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/attaque"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_attack"
                app:layout_constraintEnd_toStartOf="@id/tv_count_attaque"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="@string/attaque" />

            <TextView
                android:id="@+id/tv_count_attaque"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/init_zero"
                app:layout_constraintBaseline_toBaselineOf="@id/lbl_attaque"
                app:layout_constraintStart_toEndOf="@id/lbl_attaque"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="0" />

            <SeekBar
                android:id="@+id/seek_bar_attack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:max="100"
                app:layout_constraintBottom_toTopOf="@id/lbl_defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_attaque" />

            <TextView
                android:id="@+id/lbl_defense"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/defense"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_defense"
                app:layout_constraintEnd_toStartOf="@id/tv_count_defense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_attack"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="@string/defense" />

            <TextView
                android:id="@+id/tv_count_defense"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/init_zero"
                app:layout_constraintBaseline_toBaselineOf="@id/lbl_defense"
                app:layout_constraintStart_toEndOf="@id/lbl_defense"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="0" />

            <SeekBar
                android:id="@+id/seek_bar_defense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:max="100"
                app:layout_constraintBottom_toTopOf="@id/lbl_special_attaque"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_defense" />

            <TextView
                android:id="@+id/lbl_special_attaque"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/attaque_speciale"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_special_attack"
                app:layout_constraintEnd_toStartOf="@id/tv_count_special_attaque"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_defense"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="@string/attaque_speciale" />

            <TextView
                android:id="@+id/tv_count_special_attaque"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/init_zero"
                app:layout_constraintBaseline_toBaselineOf="@id/lbl_special_attaque"
                app:layout_constraintStart_toEndOf="@id/lbl_special_attaque"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="0" />

            <SeekBar
                android:id="@+id/seek_bar_special_attack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:max="100"
                app:layout_constraintBottom_toTopOf="@id/lbl_special_defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_special_attaque" />

            <TextView
                android:id="@+id/lbl_special_defense"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/defense_speciale"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_special_defense"
                app:layout_constraintEnd_toStartOf="@id/tv_count_special_defense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_special_attack"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="@string/defense_speciale" />

            <TextView
                android:id="@+id/tv_count_special_defense"
                style="@style/TextViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:minHeight="30dp"
                android:padding="5dp"
                android:text="@string/init_zero"
                app:layout_constraintBaseline_toBaselineOf="@id/lbl_special_defense"
                app:layout_constraintStart_toEndOf="@id/lbl_special_defense"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                tools:text="0" />

            <SeekBar
                android:id="@+id/seek_bar_special_defense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:max="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_special_defense" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_precedent"
        style="@style/ButtonAccueil"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/precedent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_suivant"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_suivant"
        style="@style/ButtonAccueil"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/suivant"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_precedent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
